# scrapscii

./: pyproject.toml  scrapy.cfg
.github/: README.md
datasets/asciiart/: animals.json  animals.parquet  art-and-design.json  art-and-design.parquet  books.json  books.parquet  buildings-and-places.json  buildings-and-places.parquet  cartoons.json  cartoons.parquet  clothing-and-accessories.json  clothing-and-accessories.parquet  comics.json  comics.parquet  computers.json  computers.parquet  electronics.json  electronics.parquet  food-and-drinks.json  food-and-drinks.parquet  holiday-and-events.json  holiday-and-events.parquet  logos.json  logos.parquet  miscellaneous.json  miscellaneous.parquet  movies.json  movies.parquet  music.json  music.parquet  mythology.json  mythology.parquet  nature.json  nature.parquet  people.json  people.parquet  plants.json  plants.parquet  religion.json  religion.parquet  (+14 more)
datasets/copypasta/: asciiart.json  asciiart.parquet
datasets/graffiti/: 1943.json  1943.parquet  1row.json  1row.parquet  3-d.json  3-d.parquet  3d_diagonal.json  3d_diagonal.parquet  3x5.json  3x5.parquet  4max.json  4max.parquet  4x4_offr.json  4x4_offr.parquet  5lineoblique.json  5lineoblique.parquet  5x7.json  5x7.parquet  5x8.json  5x8.parquet  64f1.json  64f1.parquet  6x10.json  6x10.parquet  6x9.json  6x9.parquet  a_zooloo.json  a_zooloo.parquet  abby.json  abby.parquet  (+1314 more)
scrapscii/: pipelines.py  settings.py  unicode.py
scrascii/: items.py  middlewares.py  settings.py
scripts/: convert.py  fonts.py  graffiti.py  stylize.datacompdr.ipynb  stylize.py
(+13 files in other folders)
